mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/abiEncoder/conflicting_settings_reverse_experimental.sol
pragma abicoder v1;
pragma experimental ABIEncoderV2;
// ----
// Warning 9511: (0-19): ABI coder v1 is deprecated and scheduled for removal. Use ABI coder v2 instead.
// SyntaxError 8273: (20-53): ABI coder v1 has already been selected through "pragma abicoder v1".
